Fix page content block spacing

--- a/app/assets/stylesheets/hyrax.scss
+++ b/app/assets/stylesheets/hyrax.scss
@@ -380,6 +380,11 @@ body {
   }
 }
 
+#content_block_page {
+  padding: 20px;
+  margin: 0;
+}
+
 /* RESPONSIVE */
 @media (max-width: 992px) {
   .work-type {
